# discord-starosta-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  discloud.config
.github/workflows/: ci.yml
src/: main.rs
