[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"